# A-Certain-Light-Novel-Scraper

./: .gitignore  Cargo.toml  wrangler.toml
.devcontainer/: devcontainer.json  onStart.sh
src/: fetcher.rs  lib.rs
