[package]
name = "jnovel-scraper"
version = "0.1.0"
edition = "2021"
authors = ["Robin Mauritz <robinmauritzrm@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
gloo-net = "0.6.0"
scraper = "0.24.0"
worker = { version = "0.7.1" }
worker-macros = { version = "0.7.1" }

tracing-worker = { git = "https://github.com/RoganMatrivski/tracing-worker.git" }
tracing = "0.1.43"
wasm-bindgen-futures = "0.4.56"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clearurls = "0.0.4"
url = "2.5.7"
